content/2019/2019-04-05-el-concepto-de-wildcard-capture-en-java/code/javac.out
WildcardError.java:8: error: incompatible types: Object cannot be converted to CAP#1
        list.set(0, object);
                    ^
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object from capture of ?
Note: WildcardError.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error